--- a/src/app/modules/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/admin/components/dashboard/dashboard.component.scss
@@ -1,61 +1,17 @@
 ::ng-deep app-dashboard {
-  font-family: 'Itim', cursive;
+  //font-family: 'Itim', cursive;
   .dashboard-admin {
     display: flex;
 
-    .navbar-wrap {
-      background-color: #FFF;
-      margin-left: 200px;
-    }
-    .msb {
-      min-width: 250px;
-      min-height: calc(100vh);
-      height: 100%;
-      z-index: 1;
-      border-right: 1px solid #ddd;
-      background-color: #3b9dff;
-      margin-right: 30px;
-
-      .navbar {
-        border: none;
-        margin-left: 0;
-        background-color: inherit;
-      }
-
-      .navbar-header {
-        width: 100%;
-        border-bottom: 1px solid #e7e7e7;
-        margin-bottom: 10px;
-        background: #fff;
-        border-radius: 10px;
-       display: flex;
-       justify-content: center;
-      }
-
-      .navbar-nav {
-        li {
-          display: block;
-          width: 100%;
-          margin-top: 20px;
-          a {
-            padding:0 15px;
-            color: #020202;
-            &:hover{
-              text-decoration: none;
-              font-weight: bold;
-              color: white;
-            }
-
-            .fas {
-              margin-right: 8px;
-            }
-          }
-        }
-      }
+    .highlights {
+      background: linear-gradient(87deg, #f5365c 0, #f56036 100%);
+      height: 200px;
+      position: absolute;
+      width: calc(100vw - 230px);
     }
 
     main {
-
+      background-color: #f1f4f9;
     }
   }
 }
