--- a/src/app/modules/user/components/competition/competition.component.html
+++ b/src/app/modules/user/components/competition/competition.component.html
@@ -26,6 +26,7 @@
   <div class="competition-body">
     <ng-container *ngIf="!!word">
       <app-choose-word-type
+        [isCompetition]="true"
         [word]="word"
         [wordList]="roomData.words"
         (callBackChooseNextWordHandel)="callBackNextWordHandel()"
