--- a/src/app/modules/admin/components/user-course/user-manager.component.html
+++ b/src/app/modules/admin/components/user-course/user-manager.component.html
@@ -24,10 +24,8 @@
         <dxo-search-panel [visible]="true"></dxo-search-panel>
 
         <dxi-column dataField="id" width="75" caption="No" [allowSorting]="false"></dxi-column>
-        <dxi-column dataField="code" caption="Course Code" [allowSorting]="false"></dxi-column>
-        <dxi-column dataField="name" caption="Course Name" [allowSorting]="false"></dxi-column>
-        <dxi-column dataField="author" caption="Course Name" [allowSorting]="false"></dxi-column>
-        <dxi-column dataField="type" caption="Type" [allowSorting]="false"></dxi-column>
+        <dxi-column dataField="userName" caption="User Name" [allowSorting]="false"></dxi-column>
+        <dxi-column dataField="gmail" caption="gmail"></dxi-column>
       </dx-data-grid>
     </div>
   </div>
